# serializer version: 1
# name: test_decode_real_device[issue565_u1.json]
  dict({
    'batteries': list([
    ]),
    'common': dict({
      'device_address': 0,
      'manufacturer': 'SolarEdge',
      'model': 'SE10000H-US000BNI4',
      'option': '',
      'serial_number': '',
      'version': '',
    }),
    'inverter': dict({
      '_grid_status': 0,
      'ac_current': 1.03,
      'ac_current_a': 0.0,
      'ac_current_b': 0.0,
      'ac_current_c': 0.0,
      'ac_energy': 32327764,
      'ac_frequency': 60.01,
      'ac_power': 183.98,
      'ac_power_factor': 0,
      'ac_va': 0,
      'ac_var': 0,
      'ac_voltage_ab': 238.5,
      'ac_voltage_an': 119.0,
      'ac_voltage_bc': 0.0,
      'ac_voltage_bn': 0.0,
      'ac_voltage_ca': 0.0,
      'ac_voltage_cn': 0.0,
      'dc_current': 0,
      'dc_power': 186.78,
      'dc_voltage': 0,
      'did': <SunSpecDID.SPLIT_PHASE_INVERTER: 102>,
      'status': <InverterStatus.PRODUCING: 4>,
      'temperature_cabinet': 0.0,
      'temperature_heatsink': 38.4,
      'temperature_other': 0.0,
      'temperature_transformer': 0.0,
      'vendor_status': 0,
      'vendor_status_extended': 0,
    }),
    'meters': list([
      dict({
        'ac_current': 0.9807,
        'ac_current_a': 0.0,
        'ac_current_b': 0.0,
        'ac_current_c': 0.0,
        'ac_frequency': 59.99,
        'ac_power': 178.85,
        'ac_power_a': 0.0,
        'ac_power_b': 0.0,
        'ac_power_c': 0.0,
        'ac_power_factor': 0,
        'ac_power_factor_a': 0,
        'ac_power_factor_b': 0,
        'ac_power_factor_c': 0,
        'ac_va': 0,
        'ac_va_a': 0,
        'ac_va_b': 0,
        'ac_va_c': 0,
        'ac_var': 0,
        'ac_var_a': 0,
        'ac_var_b': 0,
        'ac_var_c': 0,
        'ac_voltage_ab': 0,
        'ac_voltage_an': 0,
        'ac_voltage_bc': 0,
        'ac_voltage_bn': 0,
        'ac_voltage_ca': 0,
        'ac_voltage_cn': 0,
        'ac_voltage_ll': 0,
        'ac_voltage_ln': 0,
        'apparent_energy_exported': 0,
        'apparent_energy_imported': 0,
        'did': <SunSpecDID.THREE_PHASE_WYE_METER: 203>,
        'energy_exported': 32250356.0,
        'energy_exported_a': 0.0,
        'energy_exported_b': 0.0,
        'energy_exported_c': 0.0,
        'energy_imported': 68154.0,
        'energy_imported_a': 0.0,
        'energy_imported_b': 0.0,
        'energy_imported_c': 0.0,
        'events': <MeterEvent: 0>,
        'manufacturer': '',
        'model': '',
        'option': '',
        'reactive_energy_q1': 0,
        'reactive_energy_q2': 0,
        'reactive_energy_q3': 0,
        'reactive_energy_q4': 0,
        'serial_number': '',
        'version': '',
      }),
      dict({
        'ac_current': -103.31,
        'ac_current_a': 0.0,
        'ac_current_b': 0.0,
        'ac_current_c': 0.0,
        'ac_frequency': 59.99,
        'ac_power': -12246,
        'ac_power_a': 0,
        'ac_power_b': 0,
        'ac_power_c': 0,
        'ac_power_factor': 0,
        'ac_power_factor_a': 0,
        'ac_power_factor_b': 0,
        'ac_power_factor_c': 0,
        'ac_va': 0,
        'ac_va_a': 0,
        'ac_va_b': 0,
        'ac_va_c': 0,
        'ac_var': 0,
        'ac_var_a': 0,
        'ac_var_b': 0,
        'ac_var_c': 0,
        'ac_voltage_ab': 0,
        'ac_voltage_an': 0,
        'ac_voltage_bc': 0,
        'ac_voltage_bn': 0,
        'ac_voltage_ca': 0,
        'ac_voltage_cn': 0,
        'ac_voltage_ll': 0,
        'ac_voltage_ln': 0,
        'apparent_energy_exported': 0,
        'apparent_energy_imported': 0,
        'did': <SunSpecDID.THREE_PHASE_WYE_METER: 203>,
        'energy_exported': 10117472.0,
        'energy_exported_a': 0.0,
        'energy_exported_b': 0.0,
        'energy_exported_c': 0.0,
        'energy_imported': 68372584.0,
        'energy_imported_a': 0.0,
        'energy_imported_b': 0.0,
        'energy_imported_c': 0.0,
        'events': <MeterEvent: 0>,
        'manufacturer': '',
        'model': '',
        'option': '',
        'reactive_energy_q1': 0,
        'reactive_energy_q2': 0,
        'reactive_energy_q3': 0,
        'reactive_energy_q4': 0,
        'serial_number': '',
        'version': '',
      }),
    ]),
  })
# ---
# name: test_decode_real_device[issue755_u1.json]
  dict({
    'batteries': list([
      dict({
        '_state_of_energy_raw': 16.0,
        '_state_of_health_raw': 100.0,
        'dc_current': -0.04737443849444389,
        'dc_power': 0.0,
        'dc_voltage': 819.9321899414062,
        'energy_available': 8800.0,
        'energy_exported': 0,
        'energy_imported': 0,
        'energy_max': 9800.0,
        'manufacturer': '',
        'max_charge_peak_power': 0.0,
        'max_charge_power': 0.0,
        'max_discharge_peak_power': 0.0,
        'max_discharge_power': 0.0,
        'model': '',
        'rated_energy': 9800.0,
        'serial_number': '',
        'status': <BatteryStatus.PRESERVE_CHARGE: 6>,
        'temperature_average': 23.399999618530273,
        'temperature_max': 0.0,
        'version': '',
      }),
    ]),
    'common': dict({
      'device_address': 0,
      'manufacturer': 'SolarEdge',
      'model': 'SE10K-RWS48BEN4',
      'option': '',
      'serial_number': '',
      'version': '',
    }),
    'inverter': dict({
      '_grid_status': 0,
      'ac_current': 0.75,
      'ac_current_a': 0.0,
      'ac_current_b': 0.0,
      'ac_current_c': 0.0,
      'ac_energy': 7149045,
      'ac_frequency': 50.0,
      'ac_power': -38.16,
      'ac_power_factor': 0,
      'ac_va': 0,
      'ac_var': 0,
      'ac_voltage_ab': 387.4,
      'ac_voltage_an': 223.3,
      'ac_voltage_bc': 0.0,
      'ac_voltage_bn': 0.0,
      'ac_voltage_ca': 0.0,
      'ac_voltage_cn': 0.0,
      'dc_current': 0,
      'dc_power': -38.74,
      'dc_voltage': 0,
      'did': <SunSpecDID.THREE_PHASE_INVERTER: 103>,
      'status': <InverterStatus.PRODUCING: 4>,
      'temperature_cabinet': 0.0,
      'temperature_heatsink': 34.26,
      'temperature_other': 0.0,
      'temperature_transformer': 0.0,
      'vendor_status': 0,
      'vendor_status_extended': 0,
    }),
    'meters': list([
    ]),
  })
# ---
# name: test_decode_real_device[issue768_u125.json]
  dict({
    'batteries': list([
    ]),
    'common': dict({
      'device_address': 0,
      'manufacturer': 'SolarEdge',
      'model': 'SE15K-RW000BNN4',
      'option': '',
      'serial_number': '',
      'version': '',
    }),
    'inverter': dict({
      '_grid_status': 0,
      'ac_current': 0.0,
      'ac_current_a': 0.0,
      'ac_current_b': 0.0,
      'ac_current_c': 0.0,
      'ac_energy': 13744395,
      'ac_frequency': 50.01,
      'ac_power': 0,
      'ac_power_factor': 0,
      'ac_va': 0,
      'ac_var': 0,
      'ac_voltage_ab': 406.7,
      'ac_voltage_an': 234.3,
      'ac_voltage_bc': 0.0,
      'ac_voltage_bn': 0.0,
      'ac_voltage_ca': 0.0,
      'ac_voltage_cn': 0.0,
      'dc_current': 0,
      'dc_power': 0,
      'dc_voltage': 0,
      'did': <SunSpecDID.THREE_PHASE_INVERTER: 103>,
      'status': <InverterStatus.SLEEPING: 2>,
      'temperature_cabinet': 0.0,
      'temperature_heatsink': 0.0,
      'temperature_other': 0.0,
      'temperature_transformer': 0.0,
      'vendor_status': 0,
      'vendor_status_extended': 0,
    }),
    'meters': list([
    ]),
  })
# ---
# name: test_decode_real_device[issue827_u1.json]
  dict({
    'batteries': list([
      dict({
        '_state_of_energy_raw': 66.66667175292969,
        '_state_of_health_raw': 99.0,
        'dc_current': -6.070691108703613,
        'dc_power': 5002.0,
        'dc_voltage': 822.8054809570312,
        'energy_available': 22809.599609375,
        'energy_exported': 0,
        'energy_imported': 0,
        'energy_max': 23000.0,
        'manufacturer': '',
        'max_charge_peak_power': 0.0,
        'max_charge_power': 0.0,
        'max_discharge_peak_power': 0.0,
        'max_discharge_power': 0.0,
        'model': '',
        'rated_energy': 23000.0,
        'serial_number': '',
        'status': <BatteryStatus.CHARGE: 3>,
        'temperature_average': 25.80000114440918,
        'temperature_max': 0.0,
        'version': '',
      }),
    ]),
    'common': dict({
      'device_address': 0,
      'manufacturer': 'SolarEdge',
      'model': 'SE10K-RWS48BEN4',
      'option': '',
      'serial_number': '',
      'version': '',
    }),
    'inverter': dict({
      '_grid_status': 0,
      'ac_current': 21.05,
      'ac_current_a': 0.0,
      'ac_current_b': 0.0,
      'ac_current_c': 0.0,
      'ac_energy': 2836303,
      'ac_frequency': 49.99,
      'ac_power': -5008,
      'ac_power_factor': 0,
      'ac_va': 0,
      'ac_var': 0,
      'ac_voltage_ab': 414.4,
      'ac_voltage_an': 239.0,
      'ac_voltage_bc': 0.0,
      'ac_voltage_bn': 0.0,
      'ac_voltage_ca': 0.0,
      'ac_voltage_cn': 0.0,
      'dc_current': 0,
      'dc_power': -5084,
      'dc_voltage': 0,
      'did': <SunSpecDID.THREE_PHASE_INVERTER: 103>,
      'status': <InverterStatus.OFF: 1>,
      'temperature_cabinet': 0.0,
      'temperature_heatsink': 46.99,
      'temperature_other': 0.0,
      'temperature_transformer': 0.0,
      'vendor_status': 0,
      'vendor_status_extended': 0,
    }),
    'meters': list([
      dict({
        'ac_current': 14.66,
        'ac_current_a': 0.0,
        'ac_current_b': 0.0,
        'ac_current_c': 0.0,
        'ac_frequency': 50.0,
        'ac_power': 3484,
        'ac_power_a': 0,
        'ac_power_b': 0,
        'ac_power_c': 0,
        'ac_power_factor': 0,
        'ac_power_factor_a': 0,
        'ac_power_factor_b': 0,
        'ac_power_factor_c': 0,
        'ac_va': 0,
        'ac_va_a': 0,
        'ac_va_b': 0,
        'ac_va_c': 0,
        'ac_var': 0,
        'ac_var_a': 0,
        'ac_var_b': 0,
        'ac_var_c': 0,
        'ac_voltage_ab': 0,
        'ac_voltage_an': 0,
        'ac_voltage_bc': 0,
        'ac_voltage_bn': 0,
        'ac_voltage_ca': 0,
        'ac_voltage_cn': 0,
        'ac_voltage_ll': 0,
        'ac_voltage_ln': 0,
        'apparent_energy_exported': 0,
        'apparent_energy_imported': 0,
        'did': <SunSpecDID.THREE_PHASE_WYE_METER: 203>,
        'energy_exported': 2278607.0,
        'energy_exported_a': 0.0,
        'energy_exported_b': 0.0,
        'energy_exported_c': 0.0,
        'energy_imported': 125534.0,
        'energy_imported_a': 0.0,
        'energy_imported_b': 0.0,
        'energy_imported_c': 0.0,
        'events': <MeterEvent: 0>,
        'manufacturer': '',
        'model': '',
        'option': '',
        'reactive_energy_q1': 0,
        'reactive_energy_q2': 0,
        'reactive_energy_q3': 0,
        'reactive_energy_q4': 0,
        'serial_number': '',
        'version': '',
      }),
      dict({
        'ac_current': 13.39,
        'ac_current_a': 0.0,
        'ac_current_b': 0.0,
        'ac_current_c': 0.0,
        'ac_frequency': 49.99,
        'ac_power': 2471.3,
        'ac_power_a': 0.0,
        'ac_power_b': 0.0,
        'ac_power_c': 0.0,
        'ac_power_factor': 0,
        'ac_power_factor_a': 0,
        'ac_power_factor_b': 0,
        'ac_power_factor_c': 0,
        'ac_va': 0,
        'ac_va_a': 0,
        'ac_va_b': 0,
        'ac_va_c': 0,
        'ac_var': 0,
        'ac_var_a': 0,
        'ac_var_b': 0,
        'ac_var_c': 0,
        'ac_voltage_ab': 0,
        'ac_voltage_an': 0,
        'ac_voltage_bc': 0,
        'ac_voltage_bn': 0,
        'ac_voltage_ca': 0,
        'ac_voltage_cn': 0,
        'ac_voltage_ll': 0,
        'ac_voltage_ln': 0,
        'apparent_energy_exported': 0,
        'apparent_energy_imported': 0,
        'did': <SunSpecDID.THREE_PHASE_WYE_METER: 203>,
        'energy_exported': 3089364.0,
        'energy_exported_a': 0.0,
        'energy_exported_b': 0.0,
        'energy_exported_c': 0.0,
        'energy_imported': 11189440.0,
        'energy_imported_a': 0.0,
        'energy_imported_b': 0.0,
        'energy_imported_c': 0.0,
        'events': <MeterEvent: 0>,
        'manufacturer': '',
        'model': '',
        'option': '',
        'reactive_energy_q1': 0,
        'reactive_energy_q2': 0,
        'reactive_energy_q3': 0,
        'reactive_energy_q4': 0,
        'serial_number': '',
        'version': '',
      }),
      dict({
        'ac_current': 11.452,
        'ac_current_a': 0.0,
        'ac_current_b': 0.0,
        'ac_current_c': 0.0,
        'ac_frequency': 50.0,
        'ac_power': 2739.7,
        'ac_power_a': 0.0,
        'ac_power_b': 0.0,
        'ac_power_c': 0.0,
        'ac_power_factor': 0,
        'ac_power_factor_a': 0,
        'ac_power_factor_b': 0,
        'ac_power_factor_c': 0,
        'ac_va': 0,
        'ac_va_a': 0,
        'ac_va_b': 0,
        'ac_va_c': 0,
        'ac_var': 0,
        'ac_var_a': 0,
        'ac_var_b': 0,
        'ac_var_c': 0,
        'ac_voltage_ab': 0,
        'ac_voltage_an': 0,
        'ac_voltage_bc': 0,
        'ac_voltage_bn': 0,
        'ac_voltage_ca': 0,
        'ac_voltage_cn': 0,
        'ac_voltage_ll': 0,
        'ac_voltage_ln': 0,
        'apparent_energy_exported': 0,
        'apparent_energy_imported': 0,
        'did': <SunSpecDID.THREE_PHASE_WYE_METER: 203>,
        'energy_exported': 4150989.0,
        'energy_exported_a': 0.0,
        'energy_exported_b': 0.0,
        'energy_exported_c': 0.0,
        'energy_imported': 217767.0,
        'energy_imported_a': 0.0,
        'energy_imported_b': 0.0,
        'energy_imported_c': 0.0,
        'events': <MeterEvent: 0>,
        'manufacturer': '',
        'model': '',
        'option': '',
        'reactive_energy_q1': 0,
        'reactive_energy_q2': 0,
        'reactive_energy_q3': 0,
        'reactive_energy_q4': 0,
        'serial_number': '',
        'version': '',
      }),
    ]),
  })
# ---
# name: test_decode_real_device[issue827_u2.json]
  dict({
    'batteries': list([
    ]),
    'common': dict({
      'device_address': 0,
      'manufacturer': 'SolarEdge',
      'model': 'SE4K-RWBTEBEN4',
      'option': '',
      'serial_number': '',
      'version': '',
    }),
    'inverter': dict({
      '_grid_status': 0,
      'ac_current': 13.24,
      'ac_current_a': 0.0,
      'ac_current_b': 0.0,
      'ac_current_c': 0.0,
      'ac_energy': 2867304,
      'ac_frequency': 49.98,
      'ac_power': 3173,
      'ac_power_factor': 0,
      'ac_va': 0,
      'ac_var': 0,
      'ac_voltage_ab': 418.6,
      'ac_voltage_an': 241.9,
      'ac_voltage_bc': 0.0,
      'ac_voltage_bn': 0.0,
      'ac_voltage_ca': 0.0,
      'ac_voltage_cn': 0.0,
      'dc_current': 0,
      'dc_power': 3221,
      'dc_voltage': 0,
      'did': <SunSpecDID.THREE_PHASE_INVERTER: 103>,
      'status': <InverterStatus.PRODUCING: 4>,
      'temperature_cabinet': 0.0,
      'temperature_heatsink': 47.15,
      'temperature_other': 0.0,
      'temperature_transformer': 0.0,
      'vendor_status': 0,
      'vendor_status_extended': 0,
    }),
    'meters': list([
    ]),
  })
# ---
# name: test_decode_real_device[issue895_u1.json]
  dict({
    'batteries': list([
    ]),
    'common': dict({
      'device_address': 0,
      'manufacturer': 'SolarEdge',
      'model': 'SE5000H-AUSNBBX14',
      'option': '',
      'serial_number': '',
      'version': '',
    }),
    'inverter': dict({
      '_grid_status': 0,
      'ac_current': 6.41,
      'ac_current_a': 0.0,
      'ac_current_b': 0.0,
      'ac_current_c': 0.0,
      'ac_energy': 9477377,
      'ac_frequency': 49.976,
      'ac_power': 1530.1,
      'ac_power_factor': 0,
      'ac_va': 0,
      'ac_var': 0,
      'ac_voltage_ab': 241.1,
      'ac_voltage_an': 241.1,
      'ac_voltage_bc': 0.0,
      'ac_voltage_bn': 0.0,
      'ac_voltage_ca': 0.0,
      'ac_voltage_cn': 0.0,
      'dc_current': 0,
      'dc_power': 1553.4,
      'dc_voltage': 0,
      'did': <SunSpecDID.SINGLE_PHASE_INVERTER: 101>,
      'status': <InverterStatus.PRODUCING: 4>,
      'temperature_cabinet': 0.0,
      'temperature_heatsink': 31.42,
      'temperature_other': 0.0,
      'temperature_transformer': 0.0,
      'vendor_status': 0,
      'vendor_status_extended': 0,
    }),
    'meters': list([
      dict({
        'ac_current': 9.379,
        'ac_current_a': 0.0,
        'ac_current_b': 0.0,
        'ac_current_c': 0.0,
        'ac_frequency': 49.97,
        'ac_power': 326.1,
        'ac_power_a': 0.0,
        'ac_power_b': 0.0,
        'ac_power_c': 0.0,
        'ac_power_factor': 0,
        'ac_power_factor_a': 0,
        'ac_power_factor_b': 0,
        'ac_power_factor_c': 0,
        'ac_va': 0,
        'ac_va_a': 0,
        'ac_va_b': 0,
        'ac_va_c': 0,
        'ac_var': 0,
        'ac_var_a': 0,
        'ac_var_b': 0,
        'ac_var_c': 0,
        'ac_voltage_ab': 0,
        'ac_voltage_an': 0,
        'ac_voltage_bc': 0,
        'ac_voltage_bn': 0,
        'ac_voltage_ca': 0,
        'ac_voltage_cn': 0,
        'ac_voltage_ll': 0,
        'ac_voltage_ln': 0,
        'apparent_energy_exported': 0,
        'apparent_energy_imported': 0,
        'did': <SunSpecDID.THREE_PHASE_WYE_METER: 203>,
        'energy_exported': 13631357.0,
        'energy_exported_a': 0.0,
        'energy_exported_b': 0.0,
        'energy_exported_c': 0.0,
        'energy_imported': 8573487.0,
        'energy_imported_a': 0.0,
        'energy_imported_b': 0.0,
        'energy_imported_c': 0.0,
        'events': <MeterEvent: 0>,
        'manufacturer': '',
        'model': '',
        'option': '',
        'reactive_energy_q1': 0,
        'reactive_energy_q2': 0,
        'reactive_energy_q3': 0,
        'reactive_energy_q4': 0,
        'serial_number': '',
        'version': '',
      }),
    ]),
  })
# ---
# name: test_decode_real_device[issue895_u2.json]
  dict({
    'batteries': list([
    ]),
    'common': dict({
      'device_address': 0,
      'manufacturer': 'SolarEdge',
      'model': 'SE5000H-AUSNBBX14',
      'option': '',
      'serial_number': '',
      'version': '',
    }),
    'inverter': dict({
      '_grid_status': 0,
      'ac_current': 6.68,
      'ac_current_a': 0.0,
      'ac_current_b': 0.0,
      'ac_current_c': 0.0,
      'ac_energy': 10039156,
      'ac_frequency': 49.978,
      'ac_power': 1599.6,
      'ac_power_factor': 0,
      'ac_va': 0,
      'ac_var': 0,
      'ac_voltage_ab': 241.1,
      'ac_voltage_an': 241.1,
      'ac_voltage_bc': 0.0,
      'ac_voltage_bn': 0.0,
      'ac_voltage_ca': 0.0,
      'ac_voltage_cn': 0.0,
      'dc_current': 0,
      'dc_power': 1624.0,
      'dc_voltage': 0,
      'did': <SunSpecDID.SINGLE_PHASE_INVERTER: 101>,
      'status': <InverterStatus.PRODUCING: 4>,
      'temperature_cabinet': 0.0,
      'temperature_heatsink': 31.2,
      'temperature_other': 0.0,
      'temperature_transformer': 0.0,
      'vendor_status': 0,
      'vendor_status_extended': 0,
    }),
    'meters': list([
    ]),
  })
# ---
# name: test_decode_real_device[issue913_u1.json]
  dict({
    'batteries': list([
      dict({
        '_state_of_energy_raw': 99.94781494140625,
        '_state_of_health_raw': 100.0,
        'dc_current': -0.0,
        'dc_power': 0.0,
        'dc_voltage': 403.8467102050781,
        'energy_available': 9581.759765625,
        'energy_exported': 0,
        'energy_imported': 0,
        'energy_max': 9700.0,
        'manufacturer': '',
        'max_charge_peak_power': 0.0,
        'max_charge_power': 0.0,
        'max_discharge_peak_power': 0.0,
        'max_discharge_power': 0.0,
        'model': '',
        'rated_energy': 9700.0,
        'serial_number': '',
        'status': <BatteryStatus.PRESERVE_CHARGE: 6>,
        'temperature_average': 23.608806610107422,
        'temperature_max': 0.0,
        'version': '',
      }),
      dict({
        '_state_of_energy_raw': 99.2170181274414,
        '_state_of_health_raw': 100.0,
        'dc_current': -0.0,
        'dc_power': 0.0,
        'dc_voltage': 404.8029479980469,
        'energy_available': 9706.5595703125,
        'energy_exported': 0,
        'energy_imported': 0,
        'energy_max': 9700.0,
        'manufacturer': '',
        'max_charge_peak_power': 0.0,
        'max_charge_power': 0.0,
        'max_discharge_peak_power': 0.0,
        'max_discharge_power': 0.0,
        'model': '',
        'rated_energy': 9700.0,
        'serial_number': '',
        'status': <BatteryStatus.PRESERVE_CHARGE: 6>,
        'temperature_average': 23.861509323120117,
        'temperature_max': 0.0,
        'version': '',
      }),
    ]),
    'common': dict({
      'device_address': 0,
      'manufacturer': 'SolarEdge',
      'model': 'SE10000H-AUSNBBX14',
      'option': '',
      'serial_number': '',
      'version': '',
    }),
    'inverter': dict({
      '_grid_status': 0,
      'ac_current': 39.99,
      'ac_current_a': 0.0,
      'ac_current_b': 0.0,
      'ac_current_c': 0.0,
      'ac_energy': 18785652,
      'ac_frequency': 50.037,
      'ac_power': 9490,
      'ac_power_factor': 0,
      'ac_va': 0,
      'ac_var': 0,
      'ac_voltage_ab': 250.2,
      'ac_voltage_an': 250.2,
      'ac_voltage_bc': 0.0,
      'ac_voltage_bn': 0.0,
      'ac_voltage_ca': 0.0,
      'ac_voltage_cn': 0.0,
      'dc_current': 0,
      'dc_power': 9635,
      'dc_voltage': 0,
      'did': <SunSpecDID.SINGLE_PHASE_INVERTER: 101>,
      'status': <InverterStatus.PRODUCING: 4>,
      'temperature_cabinet': 0.0,
      'temperature_heatsink': 47.67,
      'temperature_other': 0.0,
      'temperature_transformer': 0.0,
      'vendor_status': 0,
      'vendor_status_extended': 0,
    }),
    'meters': list([
      dict({
        'ac_current': 30.08,
        'ac_current_a': 0.0,
        'ac_current_b': 0.0,
        'ac_current_c': 0.0,
        'ac_frequency': 50.02,
        'ac_power': 5279,
        'ac_power_a': 0,
        'ac_power_b': 0,
        'ac_power_c': 0,
        'ac_power_factor': 0,
        'ac_power_factor_a': 0,
        'ac_power_factor_b': 0,
        'ac_power_factor_c': 0,
        'ac_va': 0,
        'ac_va_a': 0,
        'ac_va_b': 0,
        'ac_va_c': 0,
        'ac_var': 0,
        'ac_var_a': 0,
        'ac_var_b': 0,
        'ac_var_c': 0,
        'ac_voltage_ab': 0,
        'ac_voltage_an': 0,
        'ac_voltage_bc': 0,
        'ac_voltage_bn': 0,
        'ac_voltage_ca': 0,
        'ac_voltage_cn': 0,
        'ac_voltage_ll': 0,
        'ac_voltage_ln': 0,
        'apparent_energy_exported': 0,
        'apparent_energy_imported': 0,
        'did': <SunSpecDID.THREE_PHASE_WYE_METER: 203>,
        'energy_exported': 2324624.0,
        'energy_exported_a': 0.0,
        'energy_exported_b': 0.0,
        'energy_exported_c': 0.0,
        'energy_imported': 12320555.0,
        'energy_imported_a': 0.0,
        'energy_imported_b': 0.0,
        'energy_imported_c': 0.0,
        'events': <MeterEvent: 0>,
        'manufacturer': '',
        'model': '',
        'option': '',
        'reactive_energy_q1': 0,
        'reactive_energy_q2': 0,
        'reactive_energy_q3': 0,
        'reactive_energy_q4': 0,
        'serial_number': '',
        'version': '',
      }),
    ]),
  })
# ---
# name: test_decode_real_device[issue929_u1.json]
  dict({
    'batteries': list([
    ]),
    'common': dict({
      'device_address': 0,
      'manufacturer': 'SolarEdge',
      'model': 'SE10000H-USSNBBL14',
      'option': '',
      'serial_number': '',
      'version': '',
    }),
    'inverter': dict({
      '_grid_status': 0,
      'ac_current': 2.44,
      'ac_current_a': 0.0,
      'ac_current_b': 0.0,
      'ac_current_c': 0.0,
      'ac_energy': 38685640,
      'ac_frequency': 60.003,
      'ac_power': 587.9,
      'ac_power_factor': 0,
      'ac_va': 0,
      'ac_var': 0,
      'ac_voltage_ab': 245.9,
      'ac_voltage_an': 123.4,
      'ac_voltage_bc': 0.0,
      'ac_voltage_bn': 0.0,
      'ac_voltage_ca': 0.0,
      'ac_voltage_cn': 0.0,
      'dc_current': 0,
      'dc_power': 596.9,
      'dc_voltage': 0,
      'did': <SunSpecDID.SPLIT_PHASE_INVERTER: 102>,
      'status': <InverterStatus.PRODUCING: 4>,
      'temperature_cabinet': 0.0,
      'temperature_heatsink': 14.66,
      'temperature_other': 0.0,
      'temperature_transformer': 0.0,
      'vendor_status': 0,
      'vendor_status_extended': 0,
    }),
    'meters': list([
      dict({
        'ac_current': 2.4651,
        'ac_current_a': 0.0,
        'ac_current_b': 0.0,
        'ac_current_c': 0.0,
        'ac_frequency': 59.99,
        'ac_power': 595.1,
        'ac_power_a': 0.0,
        'ac_power_b': 0.0,
        'ac_power_c': 0.0,
        'ac_power_factor': 0,
        'ac_power_factor_a': 0,
        'ac_power_factor_b': 0,
        'ac_power_factor_c': 0,
        'ac_va': 0,
        'ac_va_a': 0,
        'ac_va_b': 0,
        'ac_va_c': 0,
        'ac_var': 0,
        'ac_var_a': 0,
        'ac_var_b': 0,
        'ac_var_c': 0,
        'ac_voltage_ab': 0,
        'ac_voltage_an': 0,
        'ac_voltage_bc': 0,
        'ac_voltage_bn': 0,
        'ac_voltage_ca': 0,
        'ac_voltage_cn': 0,
        'ac_voltage_ll': 0,
        'ac_voltage_ln': 0,
        'apparent_energy_exported': 0,
        'apparent_energy_imported': 0,
        'did': <SunSpecDID.THREE_PHASE_WYE_METER: 203>,
        'energy_exported': 38555210.0,
        'energy_exported_a': 0.0,
        'energy_exported_b': 0.0,
        'energy_exported_c': 0.0,
        'energy_imported': 89048.0,
        'energy_imported_a': 0.0,
        'energy_imported_b': 0.0,
        'energy_imported_c': 0.0,
        'events': <MeterEvent: 0>,
        'manufacturer': '',
        'model': '',
        'option': '',
        'reactive_energy_q1': 0,
        'reactive_energy_q2': 0,
        'reactive_energy_q3': 0,
        'reactive_energy_q4': 0,
        'serial_number': '',
        'version': '',
      }),
      dict({
        'ac_current': 5.646,
        'ac_current_a': 0.0,
        'ac_current_b': 0.0,
        'ac_current_c': 0.0,
        'ac_frequency': 59.99,
        'ac_power': -50.83,
        'ac_power_a': 0.0,
        'ac_power_b': 0.0,
        'ac_power_c': 0.0,
        'ac_power_factor': 0,
        'ac_power_factor_a': 0,
        'ac_power_factor_b': 0,
        'ac_power_factor_c': 0,
        'ac_va': 0,
        'ac_va_a': 0,
        'ac_va_b': 0,
        'ac_va_c': 0,
        'ac_var': 0,
        'ac_var_a': 0,
        'ac_var_b': 0,
        'ac_var_c': 0,
        'ac_voltage_ab': 0,
        'ac_voltage_an': 0,
        'ac_voltage_bc': 0,
        'ac_voltage_bn': 0,
        'ac_voltage_ca': 0,
        'ac_voltage_cn': 0,
        'ac_voltage_ll': 0,
        'ac_voltage_ln': 0,
        'apparent_energy_exported': 0,
        'apparent_energy_imported': 0,
        'did': <SunSpecDID.THREE_PHASE_WYE_METER: 203>,
        'energy_exported': 27233212.0,
        'energy_exported_a': 0.0,
        'energy_exported_b': 0.0,
        'energy_exported_c': 0.0,
        'energy_imported': 18466722.0,
        'energy_imported_a': 0.0,
        'energy_imported_b': 0.0,
        'energy_imported_c': 0.0,
        'events': <MeterEvent: 0>,
        'manufacturer': '',
        'model': '',
        'option': '',
        'reactive_energy_q1': 0,
        'reactive_energy_q2': 0,
        'reactive_energy_q3': 0,
        'reactive_energy_q4': 0,
        'serial_number': '',
        'version': '',
      }),
    ]),
  })
# ---
# name: test_decode_real_device[issue944_u1.json]
  dict({
    'batteries': list([
      dict({
        '_state_of_energy_raw': 95.82250213623047,
        '_state_of_health_raw': 98.0,
        'dc_current': 0.16793091595172882,
        'dc_power': -66.0,
        'dc_voltage': 403.646728515625,
        'energy_available': 9599.0400390625,
        'energy_exported': 0,
        'energy_imported': 0,
        'energy_max': 9700.0,
        'manufacturer': '',
        'max_charge_peak_power': 0.0,
        'max_charge_power': 0.0,
        'max_discharge_peak_power': 0.0,
        'max_discharge_power': 0.0,
        'model': '',
        'rated_energy': 9700.0,
        'serial_number': '',
        'status': <BatteryStatus.DISCHARGE: 4>,
        'temperature_average': 8.505219459533691,
        'temperature_max': 0.0,
        'version': '',
      }),
      dict({
        '_state_of_energy_raw': 94.600830078125,
        '_state_of_health_raw': 99.0,
        'dc_current': 0.16148528456687927,
        'dc_power': -66.0,
        'dc_voltage': 402.603759765625,
        'energy_available': 9668.16015625,
        'energy_exported': 0,
        'energy_imported': 0,
        'energy_max': 9700.0,
        'manufacturer': '',
        'max_charge_peak_power': 0.0,
        'max_charge_power': 0.0,
        'max_discharge_peak_power': 0.0,
        'max_discharge_power': 0.0,
        'model': '',
        'rated_energy': 9700.0,
        'serial_number': '',
        'status': <BatteryStatus.DISCHARGE: 4>,
        'temperature_average': 10.410821914672852,
        'temperature_max': 0.0,
        'version': '',
      }),
    ]),
    'common': dict({
      'device_address': 0,
      'manufacturer': 'SolarEdge',
      'model': 'SE8000H-RWBMNBF54',
      'option': '',
      'serial_number': '',
      'version': '',
    }),
    'inverter': dict({
      '_grid_status': 0,
      'ac_current': 1.1,
      'ac_current_a': 0.0,
      'ac_current_b': 0.0,
      'ac_current_c': 0.0,
      'ac_energy': 20857048,
      'ac_frequency': 50.045,
      'ac_power': 256.56,
      'ac_power_factor': 0,
      'ac_va': 0,
      'ac_var': 0,
      'ac_voltage_ab': 244.3,
      'ac_voltage_an': 244.3,
      'ac_voltage_bc': 0.0,
      'ac_voltage_bn': 0.0,
      'ac_voltage_ca': 0.0,
      'ac_voltage_cn': 0.0,
      'dc_current': 0,
      'dc_power': 260.46,
      'dc_voltage': 0,
      'did': <SunSpecDID.SINGLE_PHASE_INVERTER: 101>,
      'status': <InverterStatus.PRODUCING: 4>,
      'temperature_cabinet': 0.0,
      'temperature_heatsink': 23.18,
      'temperature_other': 0.0,
      'temperature_transformer': 0.0,
      'vendor_status': 0,
      'vendor_status_extended': 0,
    }),
    'meters': list([
      dict({
        'ac_current': 3.062,
        'ac_current_a': 0.0,
        'ac_current_b': 0.0,
        'ac_current_c': 0.0,
        'ac_frequency': 50.04,
        'ac_power': 28.217,
        'ac_power_a': 0.0,
        'ac_power_b': 0.0,
        'ac_power_c': 0.0,
        'ac_power_factor': 0,
        'ac_power_factor_a': 0,
        'ac_power_factor_b': 0,
        'ac_power_factor_c': 0,
        'ac_va': 0,
        'ac_va_a': 0,
        'ac_va_b': 0,
        'ac_va_c': 0,
        'ac_var': 0,
        'ac_var_a': 0,
        'ac_var_b': 0,
        'ac_var_c': 0,
        'ac_voltage_ab': 0,
        'ac_voltage_an': 0,
        'ac_voltage_bc': 0,
        'ac_voltage_bn': 0,
        'ac_voltage_ca': 0,
        'ac_voltage_cn': 0,
        'ac_voltage_ll': 0,
        'ac_voltage_ln': 0,
        'apparent_energy_exported': 0,
        'apparent_energy_imported': 0,
        'did': <SunSpecDID.THREE_PHASE_WYE_METER: 203>,
        'energy_exported': 443434.0,
        'energy_exported_a': 0.0,
        'energy_exported_b': 0.0,
        'energy_exported_c': 0.0,
        'energy_imported': 1629581.0,
        'energy_imported_a': 0.0,
        'energy_imported_b': 0.0,
        'energy_imported_c': 0.0,
        'events': <MeterEvent: 0>,
        'manufacturer': '',
        'model': '',
        'option': '',
        'reactive_energy_q1': 0,
        'reactive_energy_q2': 0,
        'reactive_energy_q3': 0,
        'reactive_energy_q4': 0,
        'serial_number': '',
        'version': '',
      }),
    ]),
  })
# ---
